# ayon-python-api

./: .buildinfo  .gitignore  README.md  automated_api.py  ayon_api.constants.html  ayon_api.entity_hub.html  ayon_api.events.html  ayon_api.exceptions.html  ayon_api.graphql.html  ayon_api.graphql_queries.html  ayon_api.html  ayon_api.operations.html  ayon_api.server_api.html  ayon_api.typing.html  ayon_api.utils.html  ayon_api.version.html  genindex.html  index.html  manage_version.py  mkdocs.yml  mkdocs_hooks.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.py
.github/workflows/: check_global_api.yml  create_release.yml  docs-publish.yml  python-publish.yml
_modules/: index.html
_modules/ayon_api/: _api.html  entity_hub.html  events.html  exceptions.html  graphql.html  graphql_queries.html  operations.html  server_api.html  typing.html  utils.html
_sources/: ayon_api.constants.rst.txt  ayon_api.entity_hub.rst.txt  ayon_api.graphql.rst.txt  ayon_api.operations.rst.txt  ayon_api.rst.txt  ayon_api.server_api.rst.txt  ayon_api.typing.rst.txt  ayon_api.utils.rst.txt  ayon_api.version.rst.txt  index.rst.txt  modules.rst.txt
_static/: documentation_options.js
ayon_api/: __init__.py  _actions.py  _activities.py  _addons.py  _api.py  _base.py  _events.py  _folders.py  _links.py  _lists.py  _products.py  _projects.py  _representations.py  _tasks.py  _thumbnails.py  _typing.py  _versions.py  _workfiles.py  constants.py  entity_hub.py  events.py  exceptions.py  graphql.py  graphql_queries.py  operations.py  server.py  server_api.py  typing.py  utils.py  version.py
ayon_api/_api_helpers/: __init__.py  actions.py  activities.py  attributes.py  base.py  bundles_addons.py  dependency_packages.py  events.py  folders.py  installers.py  links.py  lists.py  products.py  projects.py  representations.py  secrets.py  tasks.py  thumbnails.py  versions.py  workfiles.py
docs/: check_docstrings.bat  make_api.bat  make_html.bat
docs/source/: ayon_api.exceptions.rst  ayon_api.rst  conf.py  index.rst  modules.rst
openpype/client/: README.md  connection.py  entities.py  settings.py  utils.py
openpype/client/entities/: attributes.py  base_entity.py  exceptions.py  folder_entity.py  representation_entity.py  subset_entity.py  task_entity.py  utils.py  version_entity.py
openpype/host/: host.py  process_tools.py
openpype/host/create/: context.py  legacy_create.py  lib.py  plugin.py  utils.py
openpype/host/load/: context.py  plugin.py  utils.py
openpype/host/publish/: lib.py
openpype/hosts/: host.py
openpype/hosts/create/: context.py  plugin.py
openpype/hosts/load/: context.py  plugin.py
openpype/hosts/publish/: publish_plugins.py
openpype/lib/: README.md  event_system.py  profiles_filtering.py  python_2_comp.py  python_module_discovery.py  python_module_tools.py  string_formatting.py
openpype/module/: base.py  interfaces.py
openpype/modules/: base.py
openpype/pipeline/: anatomy.py  host.py  plugin_discover.py
openpype/pipeline/create/: context.py
openpype/pipeline/load/: context.py  plugin.py
openpype/tools/launcher/: action.py
openpype/tools/loader/: action.py
openpype_api/: __init__.py  constants.py  operations.py  server.py  server_api.py  utils.py
openpype_client/: __init__.py  constants.py  entities.py  graphql_queries.py  operations.py  server.py  settings.py  utils.py
server/openpype_info/: machine_settings.py  openpype_version.py
server/openpype_server_ops/: connection.py
server_info/: README.md
server_info/openpype_server_info/: connection.py
tests/: conftest.py  my_helper_functions.py  test_entity_hub.py  test_folder_hierarchy.py  test_get_events.py  test_graphql_queries.py  test_server.py
tests/resources/addon/: .gitignore  create_package.py  package.py
tests/resources/addon/server/: __init__.py
