[project]
name = "ayon-python-api"
version = "1.0.9"
description = "AYON Python API"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "ynput.io", email = "info@ynput.io"}
]
keywords = ["AYON", "ynput", "OpenPype", "vfx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests >= 2.27.1",
    "Unidecode >= 1.3.0",
    "appdirs >=1, <2",
]

[project.urls]
Repository = "https://github.com/ynput/ayon-python-api"
Changelog = "https://github.com/ynput/ayon-python-api/releases"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ayon-python-api"
version = "1.0.9"
description = "AYON Python API"
authors = [
    "ynput.io <info@ynput.io>"
]

[tool.poetry.dependencies]
python = ">=3.6.5"
requests = "^2.27"
Unidecode = "^1.3"
appdirs = "^1.4"

[tool.poetry.group.dev.dependencies]
sphinx = "*"
mock = "*"
sphinx-autoapi = "*"
revitron-sphinx-theme = { git = "https://github.com/revitron/revitron-sphinx-theme.git", branch = "master" }
pytest = "^6.2.5"
pydocstyle = "^6.3.0"
