[project]
name = "ayon-python-api"
version = "1.0.13-dev"
description = "AYON Python API"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "ynput.io", email = "info@ynput.io"}
]
keywords = ["AYON", "ynput", "OpenPype", "vfx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests >= 2.27.1",
    "Unidecode >= 1.3.0",
    "appdirs >=1, <2",
]

[project.urls]
Repository = "https://github.com/ynput/ayon-python-api"
Changelog = "https://github.com/ynput/ayon-python-api/releases"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ayon-python-api"
version = "1.0.13-dev"
description = "AYON Python API"
authors = [
    "ynput.io <info@ynput.io>"
]
packages = [
    { include = "ayon_api" }
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.27"
Unidecode = "^1.3"
appdirs = "^1.4"

[tool.poetry.group.dev.dependencies]
sphinx = "*"
mock = "*"
sphinx-autoapi = "*"
revitron-sphinx-theme = { git = "https://github.com/revitron/revitron-sphinx-theme.git", branch = "master" }
pytest = "^6.2.5"
pydocstyle = "^6.3.0"
tomlkit = "^0.13.2"
requests = "^2.32.3"
mkdocs-material = "^9.6.7"
mkdocs-autoapi = "^0.4.0"
mkdocstrings-python = "^1.16.2"
mkdocstrings-shell = "^1.0.2"
mkdocs-click = "^0.8.1"
mkdocs-minify-plugin = "^0.8.0"
markdown-checklist = "^0.4.4"
mdx-gh-links = "^0.4"
pymdown-extensions = "^10.14.3"
mike = "^2.1.3"
